# Flight-Management-System

./: .gitignore  README.md  requirements.txt
cpp/: CMakeLists.txt  FMS  FMS.cpp  README.md  fms.h  fms_core.cpp
cpp_bindings/: bindings.cpp  build_log.txt  setup.py
python_package/: pyproject.toml
python_package/flight_fms/: __init__.py  api.py
scripts/: build_extension.sh  run_streamlit.sh
web/: app.py  app2.py  flights_db.txt
